add get-all-reviews
